# remote-coder

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.ko.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.ko.md  README.md  RELEASE.md  SECURITY.md  environment.yml  prepare.sh  pyproject.toml  requirements.txt  run.bat  run.ps1  run.sh
.clinerules/: 00-project-context.md  05-agent-behavior.md  10-architecture-oop-gof.md  15-clean-code.md  20-tech-stack-and-fastapi.md  30-security-telegram.md  40-git-job-ai-runner.md  50-testing-docs-sync.md  60-comments-policy.md
.cursor/: hooks.json
app/: __init__.py  cli.py  config.py  diagnostics.py  main.py  models.py  system_startup.py  tunnel.py
doc/: env_setup_guide.md
docs/: ai-runners.ko.md  ai-runners.md  claude-guide.md  codex-guide.md  env_setup_guide.md  gemini-guide.md  mode-addons-design.md  mode-addons.ko.md  mode-addons.md  multi-bot-setup.ko.md  multi-bot-setup.md  read-only-workspace.ko.md  read-only-workspace.md
scripts/: dev.sh  install.sh  prepare.sh  set_webhook.py
tests/: conftest.py  test_addon_loading.py  test_admin_router.py  test_ai_base.py  test_ai_commit.py  test_ai_factory.py  test_ask_mode_execution.py  test_auth.py  test_base_runner.py  test_bot_instance_manager.py  test_branch_naming.py  test_callback_dispatcher_schedule.py  test_claude_runner.py  test_cli.py  test_codex_runner.py  test_command_flow.py  test_command_parser.py  test_commands.py  test_commit_message_formatter.py  test_commit_message_formatter_regression.py  test_config.py  test_conversation_store.py  test_database_browser.py  test_diagnostics.py  test_diff_review.py  test_event_logger.py  (+40 more)
(+127 files in other folders)
