[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remote-coder"
version = "0.5.4"
description = "Telegram-based remote AI coding automation server"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Remote AI Coder contributors" }
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "pyyaml>=6.0,<7.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<10.0",
  "pytest-asyncio>=0.23,<2.0",
  "respx>=0.21,<1.0",
]

[project.scripts]
remote-coder = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.admin" = ["templates/*.html", "static/*.js", "static/*.css", "static/icons/*.svg"]
